chore(BUX-131): endpoint name change to singular
