# docs/swagger.json
@@ -328,7 +328,7 @@
                 "tags": [
                     "merkleroots"
                 ],
-                "summary": "Verifies merkle roots in the longest chain",
+                "summary": "Verifies Merkle roots inclusion in the longest chain",
                 "parameters": [
                     {
                         "description": "JSON",
@@ -349,7 +349,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/merkleroots.merkleRootConfirmationRespose"
+                                "$ref": "#/definitions/merkleroots.merkleRootsConfirmationsResponse"
                             }
                         }
                     }
@@ -703,7 +703,7 @@
                 }
             }
         },
-        "merkleroots.merkleRootConfirmationRespose": {
+        "merkleroots.merkleRootConfirmation": {
             "type": "object",
             "properties": {
                 "blockhash": {
@@ -714,6 +714,20 @@
                 },
                 "merkleRoot": {
                     "type": "string"
+                }
+            }
+        },
+        "merkleroots.merkleRootsConfirmationsResponse": {
+            "type": "object",
+            "properties": {
+                "allConfirmed": {
+                    "type": "boolean"
+                },
+                "confirmations": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/merkleroots.merkleRootConfirmation"
+                    }
                 }
             }
         },
